--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Sight Words",
-  "name": "My Sight Words",
+  "short_name": "Multiflash",
+  "name": "Multiflash",
   "icons": [
     {
       "src": "favicon.ico",
